Fix links accessability on mobile devices

--- a/css/styles.css
+++ b/css/styles.css
@@ -83,6 +83,10 @@ svg {
     bottom: 0;
     left: 0;
     right: 0;
+
+    @media screen and (width <=450px) {
+        height: 20vh;
+    }
 }
 
 use {
